<resources>
    <string name="app_name">Сотрудники</string>
    <string name="addData">Добавить запись</string>
    <string name="product">Продукт</string>
    <string name="quantity">Кол-во</string>
    <string name="cost">Цена</string>
    <string name="photo">Фото</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="safe">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="deleteImage">Удалить фото</string>
    <string name="sort">Сортировка:</string>
    <string-array name="spinnerItems">
        <item>нет</item>
        <item>по наименованию</item>
        <item>по количеству</item>
        <item>по цене</item>
    </string-array>
</resources>